--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,24 @@
-w
+<div class="navbar">
+			<!-- <a href="index.html"><img src="images/logo-white.png"></a> -->
+			<div class="cube">
+				<div class="flippety">
+					<!-- <h1>Dragon Force Studio</h1> -->
+					<img src="images/logo-white.png" style="max-height: 50px; width:100%; object-fit: scale-down">
+					<!-- <a href="index.html" class="title">Dragon Force Studio</a> -->
+				</div>
+				<div class="flop">
+					<h2>Join us on discord</h2>
+				</div>
+			</div>
+		</div>
+		<div id="root"></div>
+		<div class="subnavbar">
+			<div class="subnavitems">
+				<a href="/index.html">Home</a>
+				<a href="/subpages/about.html">About</a>
+				<a href="/subpages/apply.html">Apply</a>
+				<a href="/wiki.html">Wiki</a>
+				<a href="/subpages/contact.html">Contact Us</a>
+				<p id="asldkfjhasdfoi" class="closebutton" onclick="collapsePanel(this)">X</p>
+			</div>
+		</div>
