--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,19 @@ body, p {
 	padding-left: 1.25rem;
 }
 
+.iframe-container{
+  	position: relative;
+ 	width: 100%;
+ 	padding-bottom: 56.25%; 
+ 	height: 0;
+}
+.iframe-container iframe{
+ 	position: absolute;
+ 	top:0;
+	left: 0;
+	width: 100%;
+ 	height: 100%;
+}
 h1 {
 	color: #000000;
 	font: 700 2.5rem/2.875rem "Montserrat", sans-serif;
